fix(frontend): button on mobile width ml-286

--- a/apps/frontend/src/pages/profile/components/profile-form/styles.module.css
+++ b/apps/frontend/src/pages/profile/components/profile-form/styles.module.css
@@ -29,6 +29,6 @@
 	}
 
 	.profile-form__button {
-		width: 100%;
+		max-width: 100%;
 	}
 }
